# gst-airplay-mac

./: README.md  app.py  gst_hacks.py  hello.py  meson.build  requirements.txt
models/: nnUNetTrainerV2_123.py  readme.md
src/: gstairplaysrc.c
subprojects/airplay/: CMakeLists.txt
subprojects/airplay/lib/: CMakeLists.txt  airplay.pc.in  raop_handlers.h
subprojects/airplay/lib/llhttp/: CMakeLists.txt
subprojects/airplay/lib/playfair/: CMakeLists.txt
